Add Gradle and Maven
* Docs, including build tool switching
* running server with alpnagent
* running client, with optional argument
* run ScalaTest with alpnagent

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,6 +1,6 @@
 name = akka-grpc-quickstart-scala
 description = Akka gRPC is a toolkit for building streaming gRPC servers and clients on top of Akka Streams. This simple application will get you started building gRPC based systems with Scala. This app uses Akka, Scala, and ScalaTest.
-akka_grpc_version=0.1+62-bf2bd916
+akka_grpc_version=0.1+64-3433908f
 akka_version=2.5.13
 
-verbatim=*.scala *.conf *.proto *.pem *.key
+verbatim=*.scala *.conf *.proto *.xml *.pem *.key gradlew gradlew.bat gradle-wrapper.properties gradle-wrapper.jar
