--- a/src/main/g8/build.gradle
+++ b/src/main/g8/build.gradle
@@ -38,6 +38,10 @@ configurations {
 
 dependencies {
 
+  compile 'com.typesafe.akka:akka-discovery_$scala_major_version$:$akka_version$'
+  compile 'com.typesafe.akka:akka-protobuf_$scala_major_version$:$akka_version$'
+  compile 'com.typesafe.akka:akka-stream_$scala_major_version$:$akka_version$'
+
   testImplementation 'com.typesafe.akka:akka-stream-testkit_2.12:$akka_version$'
   testImplementation 'org.scalatest:scalatest_2.12:3.0.8'
   testRuntime 'org.pegdown:pegdown:1.1.0'
@@ -67,4 +71,8 @@ task runClient(type: JavaExec) {
   // arguments to pass to the application
   if (project.hasProperty("GreeterClient.user"))
     args  project.getProperty("GreeterClient.user")
+}
+
+application {
+  mainClassName = 'com.example.helloworld.GreeterServer'
 }
