--- a/src/main/g8/build.gradle
+++ b/src/main/g8/build.gradle
@@ -48,6 +48,8 @@ dependencies {
   testImplementation 'com.typesafe.akka:akka-actor-testkit-typed_$scala_major_version$:$akka_version$'
   testImplementation 'com.typesafe.akka:akka-stream-testkit_$scala_major_version$:$akka_version$'
   testImplementation 'org.scalatest:scalatest_$scala_major_version$:3.1.1'
+  // optional in Scalatest
+  testRuntime 'com.vladsch.flexmark:flexmark-all:0.35.10'
   // Required by https://github.com/maiflai/gradle-scalatest
   testRuntime 'org.pegdown:pegdown:1.4.2'
 }
