--- a/src/main/g8/src/main/resources/application.conf
+++ b/src/main/g8/src/main/resources/application.conf
@@ -2,7 +2,7 @@ akka.grpc.client {
   "helloworld.GreeterService" {
     host = 127.0.0.1
     port = 8080
-    use-tls = false
-
+    override-authority = foo.test.google.fr
+    trusted = /certs/ca.pem
   }
 }
