--- a/src/main/g8/pom.xml
+++ b/src/main/g8/pom.xml
@@ -53,6 +53,11 @@
       <artifactId>akka-stream_\${scala.binary.version}</artifactId>
       <version>\${akka.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-pki_\${scala.binary.version}</artifactId>
+      <version>\${akka.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>com.lightbend.akka.grpc</groupId>
