--- a/src/main/g8/build.gradle
+++ b/src/main/g8/build.gradle
@@ -2,17 +2,12 @@ plugins {
   id 'scala'
   id 'application'
   id "com.github.maiflai.scalatest" version "0.26"
-  // copy-pasted from https://plugins.gradle.org/plugin/com.lightbend.akka.grpc.gradle/1.0.0-M1+37-732f2dee
-  id "com.lightbend.akka.grpc.gradle" version "1.0.0-M1"
+  id "com.lightbend.akka.grpc.gradle" version "1.0.0"
 }
 
 repositories {
   mavenLocal()
   mavenCentral()
-  // TODO remove when Akka gRPC 1.0.0 is final
-  maven {
-    url "https://dl.bintray.com/akka/snapshots/"
-  }
 }
 
 dependencies {
