--- a/src/main/g8/build.gradle
+++ b/src/main/g8/build.gradle
@@ -2,7 +2,7 @@ plugins {
   id 'scala'
   id 'application'
   id "com.github.maiflai.scalatest" version "0.26"
-  id "com.lightbend.akka.grpc.gradle" version "1.0.0"
+  id "com.lightbend.akka.grpc.gradle" version '$akka_grpc_version$'
 }
 
 repositories {
