Notifications when master builds (e.g. cron) fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,3 +50,11 @@ cache:
     - $HOME/.sbt/boot
     - $HOME/.gradle
     - $HOME/.m2/repository
+
+notifications:
+  email:
+    recipients:
+      - akka.official@gmail.com
+    on_success: never
+    on_failure: always
+    if: branch = master
