--- a/src/main/g8/pom.xml
+++ b/src/main/g8/pom.xml
@@ -12,6 +12,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <akka.version>$akka_version$</akka.version>
+    <akka.http.version>10.2.0</akka.http.version>
     <akka.grpc.version>$akka_grpc_version$</akka.grpc.version>
     <scala.binary.version>$scala_major_version$</scala.binary.version>
     <grpc.version>1.28.1</grpc.version>
@@ -45,6 +46,24 @@
       <artifactId>akka-grpc-runtime_\${scala.binary.version}</artifactId>
       <version>\${akka.grpc.version}</version>
     </dependency>
+
+    <!-- // The Akka HTTP overwrites are required because Akka-gRPC depends on 10.1.x -->
+    <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-http-core_\${scala.binary.version}</artifactId>
+      <version>\${akka.http.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-http_\${scala.binary.version}</artifactId>
+      <version>\${akka.http.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.typesafe.akka</groupId>
+      <artifactId>akka-http2-support_\${scala.binary.version}</artifactId>
+      <version>\${akka.http.version}</version>
+    </dependency>
+
 
     <dependency>
       <groupId>com.typesafe.akka</groupId>
