--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ language: scala
 scala:
   - 2.13.1
 
-before_install: curl -Ls https://git.io/jabba | bash && . ~/.jabba/jabba.sh
-install: jabba install "$TRAVIS_JDK" && jabba use "$_" && java -Xmx32m -version
+before_install:
+  - if [ ! -f ~/.jabba/jabba.sh ]; then curl -L -v --retry 5 -o jabba-install.sh https://raw.githubusercontent.com/shyiko/jabba/0.11.2/install.sh && bash jabba-install.sh; fi
+  - . ~/.jabba/jabba.sh
+install: jabba install $(jabba ls-remote "adopt@~1.$TRAVIS_JDK.0-0" --latest=patch) && jabba use "$_" && java -Xmx32m -version
+
 
 jobs:
   include:
@@ -45,7 +48,7 @@ before_cache:
 cache:
   directories:
     - $HOME/.cache/coursier
-    - $HOME/.jabba/jdk
+    - $HOME/.jabba
     - $HOME/.ivy2/cache
     - $HOME/.sbt/boot
     - $HOME/.gradle
