--- a/src/main/g8/pom.xml
+++ b/src/main/g8/pom.xml
@@ -19,6 +19,14 @@
     <project.encoding>UTF-8</project.encoding>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>akka-repository</id>
+      <name>Akka library repository</name>
+      <url>https://repo.akka.io/maven</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>com.typesafe.akka</groupId>
