--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,28 +10,21 @@ on:
 
 jobs:
   check:
-    name: JDK ${{ matrix.jvm }}
+    name: Build and test
     if: github.repository == 'akka/akka-grpc-quickstart-scala.g8'
     runs-on: ubuntu-20.04
-
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - { jvm: "adopt:8" }
-          - { jvm: "adopt:11" }
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up JDK ${{ matrix.jvm }}
-        uses: coursier/setup-action@v1.1.2
+      - name: Set up JDK 11
+        uses: coursier/setup-action@v1.3.0
         with:
-          jvm: ${{ matrix.jvm }}
+          jvm: temurin:1.11
 
       - name: Cache Coursier cache
-        uses: coursier/cache-action@v6.3
+        uses: coursier/cache-action@v6.4.0
 
       - name: sbt & Paradox
         run: sbt test docs/paradox
