JDK 17, gradle 7.6, Akka gRPC 2.4.0

--- a/src/main/g8/settings.gradle
+++ b/src/main/g8/settings.gradle
@@ -1,6 +1,11 @@
 pluginManagement {
     repositories {
-        mavenLocal()
         gradlePluginPortal()
+        maven {
+            url "https://repo.akka.io/maven"
+        }
+    }
+    plugins {
+        id 'com.lightbend.akka.grpc.gradle' version '$akka_grpc_version$'
     }
 }
