--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: coursier/setup-action@v1.3.0
         with:
-          jvm: temurin:1.11
+          jvm: temurin:1.17
 
       - name: Cache Coursier cache
         uses: coursier/cache-action@v6.4.0
@@ -35,7 +35,7 @@ jobs:
 
       - name: Gradle
         run: |-
-          sbt new file://$PWD --name=hello-world-grpc --force && pushd hello-world-grpc &&  ./gradlew --console=plain build
+          sbt new file://$PWD --name=hello-world-grpc --force && pushd hello-world-grpc &&  ./gradlew --console=plain build -i --no-daemon
 
       - name: Email on failure
         if: ${{ failure() }}
