--- a/src/main/g8/gradle/wrapper/gradle-wrapper.properties
+++ b/src/main/g8/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
-#Wed Feb 28 11:34:57 CET 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.6-bin.zip
+networkTimeout=10000
+validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
