--- a/src/main/g8/build.gradle
+++ b/src/main/g8/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 plugins {
   id 'java'
   id 'application'
-  id 'com.lightbend.akka.grpc.gradle'
+  id 'com.lightbend.akka.grpc.gradle' version '$akka_grpc_version$'
 }
 repositories {
   mavenCentral()
