--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,10 @@ jobs:
       - name: sbt & Paradox
         run: sbt test docs/paradox
 
+      - name: sbt Scala 3
+        run: |-
+          sbt new file://$PWD --name=hello-world --scala_version=3.3.1 --force && pushd hello-world &&  sbt test
+
       - name: Maven
         run: |-
           sbt new file://$PWD --name=hello-world-grpc --force && pushd hello-world-grpc &&  mvn test
